maze.lessons.maze.island.IslandMaze.scala.error
Escaper:33: error: ';' expected but '.' found.
     ...
     ^Escaper:35: error: '}' expected but 'case' found.
  case 1 => var x=0
  ^Escaper:44: error: expected class or object definition
droite()
^Escaper:45: error: expected class or object definition
x=x-1
^Escaper:46: error: expected class or object definition
do {
^Escaper:53: error: expected class or object definition
while (!estSurBiscuit)
^Escaper:54: error: expected class or object definition
prendBiscuit()
^Escaper:57: error: expected class or object definition
  case _ => println("Ce cas ne devrait pas arriver. Corrigez ce problème svp.")
  ^Escaper:58: error: eof expected but '}' found.
}
^