maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
var etat=0;
etat match  {
  case 0 => if (x=1) {
  	droite()
  	while(!estFaceMur) {
  		droite();
  	}
  	avance(); gauche();
  	}
  		  if (x=2) {
  		  	droite();droite()
  		  	while(!estFaceMur) {
  		droite();
  	}
  	avance(); gauche();
  }
  		  if (x=3) {
  		  	droite();droite();droite();
  		  	while(!estFaceMur) {
  		droite();
  	}
  	avance(); gauche();
  }
  		  if (x=4) {
  		  	while(!estFaceMur) {
  		droite();
  	}
  	avance(); gauche();
  }
  		  }
     ...
     etat = 1;
  case 1 => var x=0
while (!estFaceMur) {
	gauche()
	x=x+1
		if (x=5) {
			x=0
		}
	}
}
droite()
x=x-1
do {
	gauche()
	while (estFaceMur()) {
		droite()
	}
	avance()
}
while (!estSurBiscuit)
prendBiscuit()
     ...
     etat = 0;
  case _ => println("Ce cas ne devrait pas arriver. Corrigez ce problème svp.")
}
